data/Java/07-missing-semi/2/[M]Error.txt
https://teamtreehouse.com/community/introductionsjava8-error-expected
Introductions.java:6: error: ';' expected
        Console console = System.console()
                                          ^